# cloud-platform

./: frame_create.sh  readme.md  test_backend.py
backend/: ALL.SH  BUILD.SH  CMakeLists.txt  START.SH  server_main.cpp
backend/account/: account_server.cpp  account_server.h  user.cpp  user.h
backend/admin/: admin_server.cpp  admin_server.h  dashboard.cpp  dashboard.h
backend/common/: types.h  utils.cpp  utils.h
backend/coordinator/: coordinator.cpp  coordinator.h  tablet_manager.cpp  tablet_manager.h
backend/email/: email.cpp  email.h  pop3_server.cpp  pop3_server.h  smtp_server.cpp  smtp_server.h
backend/network/: tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
backend/storage/: storage_node.cpp  storage_node.h  tablet.cpp  tablet.h
backend/storage_service/: file.cpp  file.h  storage_server.cpp  storage_server.h
frontend/: admin.html  change_password.html  home.html  index.html  login.html  register.html
frontend/css/: admin.css  home.css  styles.css
frontend/js/: admin.js  change_password.js  compose.js  files.js  home.js  inbox.js  login.js  register.js  tcp_client.js  utils.js
